misc questions in java